--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <img id="Scene-2" src="./Style/Images/Scene-2.jpg">
             <img id="Scene-3" src="./Style/Images/Scene-3.jpg">
             <img id="Scene-12" src="./Style/Images/Scene-12.jpg">
-            <img id="Scene-13" src="./Style/Images/Scene-13.jpg">
             <img id="Scene-4" src="./Style/Images/Scene-4.jpg">
+            <img id="Scene-13" src="./Style/Images/Scene-13.jpg">
             <img id="Scene-5" src="./Style/Images/Scene-5.jpg">
             <img id="Scene-14" src="./Style/Images/Scene-14.jpg">
             <img id="Scene-15" src="./Style/Images/Scene-15.jpg">
@@ -57,10 +57,10 @@
 
         </a-assets>
 
-        <!-- <a-entity laser-controls="hand: left"
+        <a-entity laser-controls="hand: left"
             raycaster="objects: [data-clickable] ; far: 500; lineColor: #23343b; lineOpacity: 0.5"></a-entity>
         <a-entity laser-controls="hand: right"
-            raycaster="objects: [data-clickable] ; far: 500; lineColor: #23343b; lineOpacity: 0.5"></a-entity> -->
+            raycaster="objects: [data-clickable] ; far: 500; lineColor: #23343b; lineOpacity: 0.5"></a-entity>
 
         <a-sky id="image-360" radius="500" rotation="0 0 0" src="#Scene-0" look-controls-invert-y="false"
             animation__fade="property: components.material.material.color; type: color; from: #FFF; to: #000; dur: 300; startEvents: fade"
