--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <title>
         Villa Bamba Ba
     </title>
+
     <script rel=preload src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script rel=preload
-        src="https://unpkg.com/aframe-event-set-component@5.x.x/dist/aframe-event-set-component.min.js"></script>
+    <script rel=preload src="https://unpkg.com/aframe-event-set-component/dist/aframe-event-set-component.min.js">
+    </script>
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link rel="stylesheet" href="./Style/Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <!-- ########################################################################################### -->
@@ -54,6 +58,8 @@
             <img id="Scene-10" src="./Style/Images/Scene-10.jpg">
             <img id="Scene-11" src="./Style/Images/Scene-11.jpg">
             <img id="Scene-16" src="./Style/Images/Scene-16.jpg">
+            <img id="Scene-17" src="./Style/Images/Scene-17.jpg">
+            <img id="Scene-18" src="./Style/Images/Scene-18.jpg">
 
         </a-assets>
 
@@ -357,10 +363,47 @@
         </a-entity>
         <!-- Group-16 -->
         <a-entity scale="0 0 0" class="groups" id="Group-16" visible="false">
+
             <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
                 position="-0.24979 -1.35898 5.17147" rotation="-80.11325074637222 -174.0387950599632 84.45397900228335"
                 the_dote="Name_of_dote: Dote-15 ; Group_to_activate: Group-15 ; The_rotation: 0">
             </a-plane>
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="-0.24979 -1.35898 -2.84789" rotation="-80.11325074637222 -174.0387950599632 84.45397900228335"
+                the_dote="Name_of_dote: Dote-17 ; Group_to_activate: Group-17 ; The_rotation: 0">
+            </a-plane>
+
+        </a-entity>
+        <!-- Group-17 -->
+        <a-entity scale="0 0 0" class="groups" id="Group-17" visible="false">
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="-0.24979 -1.35898 3.5857" rotation="-80.11325074637222 -174.0387950599632 84.45397900228335"
+                the_dote="Name_of_dote: Dote-16 ; Group_to_activate: Group-16 ; The_rotation: 0">
+            </a-plane>
+
+
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="-0.24979 -1.35898 -1.8575" rotation="-80.11325074637222 -174.0387950599632 84.45397900228335"
+                the_dote="Name_of_dote: Dote-18 ; Group_to_activate: Group-18 ; The_rotation: 0">
+            </a-plane>
+
+
+
+
+
+        </a-entity>
+        <!-- Group-18 -->
+        <a-entity scale="0 0 0" class="groups" id="Group-18" visible="false">
+
+            <a-plane data-clickable class="Dote" material="src: #Arrow-1; transparent:true"
+                position="-0.24979 -2.0047 2.79938" rotation="-80.11325074637222 -174.0387950599632 84.45397900228335"
+                the_dote="Name_of_dote: Dote-17 ; Group_to_activate: Group-17 ; The_rotation: 0">
+            </a-plane>
+
+
+
         </a-entity>
         <!-- ############################################################ -->
         <!-- ############################################################ -->
@@ -382,9 +425,9 @@
                 let TheRotation = this.data.The_rotation
                 let The_Arrow = this.el
                 this.el.setAttribute('color', '#fff')
-                this.el.setAttribute('opacity', '0.5')
-                this.el.setAttribute('event-set__mouseenter', "scale: 1.1 1.1 1.1 ; opacity : 1;  color: #fff")
                 this.el.setAttribute('event-set__mouseleave', "scale: 0.9 0.9 0.9 ; opacity : 0.5 ;  color: #fff")
+                this.el.setAttribute('event-set__mouseenter', "scale: 1.1 1.1 1.1 ; opacity : 1;  color: #fff")
+                this.el.setAttribute('opacity', '0.5')
                 this.el.addEventListener('click', (theDote) => {
 
                     the_sky.setAttribute('rotation', `0 ${TheRotation} 0`)
@@ -447,6 +490,12 @@
                                 break;
                             case 'Dote-16':
                                 the_sky.setAttribute('src', '#Scene-16')
+                                break;
+                            case 'Dote-17':
+                                the_sky.setAttribute('src', '#Scene-17')
+                                break;
+                            case 'Dote-18':
+                                the_sky.setAttribute('src', '#Scene-18')
                                 break;
                             default:
                                 break;
