--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             <img id="Scene-16" src="./Style/Images/Scene-16.jpg">
             <img id="Scene-17" src="./Style/Images/Scene-17.jpg">
             <img id="Scene-18" src="./Style/Images/Scene-18.jpg">
+            <img id="Scene-19" src="./Style/Images/Scene-19.jpg">
+            <img id="Scene-20" src="./Style/Images/Scene-20.jpg">
+            <img id="Scene-21" src="./Style/Images/Scene-21.jpg">
+            <img id="Scene-22" src="./Style/Images/Scene-22.jpg">
+            <img id="Scene-23" src="./Style/Images/Scene-23.jpg">
+            <img id="Scene-24" src="./Style/Images/Scene-24.jpg">
 
         </a-assets>
 
@@ -386,6 +392,19 @@
                 rotation="-82.09683063311513 -7.451316125676356 -82.29106332566448"
                 the_dote="Name_of_dote: Dote-16 ; Group_to_activate: Group-16 ; The_rotation: 0">
             </a-plane>
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="-0.58074 -1.35898 3.91999"
+                rotation="-80.7635578438457 -173.62168178510797 84.0311361494768"
+                the_dote="Name_of_dote: Dote-19 ; Group_to_activate: Group-19 ; The_rotation: 0">
+            </a-plane>
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="-3.90218 -1.35898 0.00747"
+                rotation="-51.26597167712554 88.4068148308909 -178.4477052934949"
+                the_dote="Name_of_dote: Dote-23 ; Group_to_activate: Group-23 ; The_rotation: 0">
+            </a-plane>
+
+
+
 
         </a-entity>
         <!-- Group-16 -->
@@ -430,6 +449,100 @@
                 the_dote="Name_of_dote: Dote-17 ; Group_to_activate: Group-17 ; The_rotation: 0">
             </a-plane>
 
+
+
+        </a-entity>
+        <!-- Group-19 -->
+        <a-entity scale="0 0 0" class="groups" id="Group-19" visible="false">
+
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="0.48276 -0.94104 -3.19173"
+                rotation="-87.3267893870693 -157.52099478413672 67.8702885800168"
+                the_dote="Name_of_dote: Dote-15 ; Group_to_activate: Group-15 ; The_rotation: 0">
+            </a-plane>
+
+
+
+
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="-4.09492 -2.0047 1.42201"
+                rotation="-59.518855758189915 109.67386227055678 163.3794882393494"
+                the_dote="Name_of_dote: Dote-20 ; Group_to_activate: Group-20 ; The_rotation: 0">
+            </a-plane>
+
+
+
+
+        </a-entity>
+        <!-- Group-20 -->
+        <a-entity scale="0 0 0" class="groups" id="Group-20" visible="false">
+
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="3.80979 -2.0047 -0.81106"
+                rotation="-74.83573649542221 -114.65573029921929 23.507312418627414"
+                the_dote="Name_of_dote: Dote-19 ; Group_to_activate: Group-19 ; The_rotation: 0">
+            </a-plane>
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="-1.70199 -1.6616 2.97269"
+                rotation="-72.2482590926114 110.9716116765281 159.55785974582676"
+                the_dote="Name_of_dote: Dote-21 ; Group_to_activate: Group-21 ; The_rotation: 0">
+            </a-plane>
+        </a-entity>
+        <!-- Group-21 -->
+        <a-entity scale="0 0 0" class="groups" id="Group-21" visible="false">
+
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="2.21857 -2.0047 -3.08049"
+                rotation="-74.83573649542221 -114.65573029921929 23.507312418627414"
+                the_dote="Name_of_dote: Dote-20 ; Group_to_activate: Group-20 ; The_rotation: 0">
+            </a-plane>
+
+
+
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="-2.24246 -1.6616 0.35217"
+                rotation="-72.2482590926114 110.9716116765281 159.55785974582676"
+                the_dote="Name_of_dote: Dote-22 ; Group_to_activate: Group-22 ; The_rotation: 0">
+            </a-plane>
+
+
+
+        </a-entity>
+        <!-- Group-22 -->
+        <a-entity scale="0 0 0" class="groups" id="Group-22" visible="false">
+
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="3.14715 -2.0047 0.09857"
+                rotation="-74.83573649542221 -114.65573029921929 23.507312418627414"
+                the_dote="Name_of_dote: Dote-21 ; Group_to_activate: Group-21 ; The_rotation: 0">
+            </a-plane>
+
+
+
+        </a-entity>
+        <!-- Group-23 -->
+        <a-entity scale="0 0 0" class="groups" id="Group-23" visible="false">
+
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="3.14715 -2.0047 0.09857"
+                rotation="-74.83573649542221 -114.65573029921929 23.507312418627414"
+                the_dote="Name_of_dote: Dote-15 ; Group_to_activate: Group-15 ; The_rotation: 0">
+            </a-plane>
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="-1.3584 -1.44777 -3.32424"
+                rotation="-82.17188810427727 143.244605402862 126.62539159729734"
+                the_dote="Name_of_dote: Dote-24 ; Group_to_activate: Group-24 ; The_rotation: 0">
+            </a-plane>
+
+        </a-entity>
+        <!-- Group-24 -->
+        <a-entity scale="0 0 0" class="groups" id="Group-24" visible="false">
+
+            <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="Dote"
+                material="src: #Arrow-1; transparent:true" position="0.07169 -1.31584 4.08557"
+                rotation="-83.29946904509474 -159.27252676385163 68.75493541569878"
+                the_dote="Name_of_dote: Dote-23 ; Group_to_activate: Group-23 ; The_rotation: 0">
+            </a-plane>
 
 
         </a-entity>
@@ -524,6 +637,24 @@
                                 break;
                             case 'Dote-18':
                                 the_sky.setAttribute('src', '#Scene-18')
+                                break;
+                            case 'Dote-19':
+                                the_sky.setAttribute('src', '#Scene-19')
+                                break;
+                            case 'Dote-20':
+                                the_sky.setAttribute('src', '#Scene-20')
+                                break;
+                            case 'Dote-21':
+                                the_sky.setAttribute('src', '#Scene-21')
+                                break;
+                            case 'Dote-22':
+                                the_sky.setAttribute('src', '#Scene-22')
+                                break;
+                            case 'Dote-23':
+                                the_sky.setAttribute('src', '#Scene-23')
+                                break;
+                            case 'Dote-24':
+                                the_sky.setAttribute('src', '#Scene-24')
                                 break;
                             default:
                                 break;
